Fix app list background shield issue for screen rotation

Background:
When screen is rotated to portrait, only half of the background shield
is shown because mask layer bounds is incorrectly updated.

1. Remove mask layer used to create corner radius for background
   shield and, instead, draw rounded corner background on Canvas.
2. As a side effect, this improves dragging smoothness.

Bug: 869622
Change-Id: Ia3b8ce30e0f76f27cdc90ab674504915a79cfb99
Reviewed-on: https://chromium-review.googlesource.com/1164178
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581027}
Former-commit-id: f64b423a073fe17d9ba71d3d065dece1676fcc8e